A bunch of stuff changed? I dunno.

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -12,6 +12,9 @@
   <%= f.label :entry_order %>
   <%= f.text_field :entry_order %>
   <br />
+  <%= f.label :current_columns %>
+  <%= f.text_field :current_columns %>
+  <br />
   <%= f.label :scoreboard_template %>
   <%= f.text_area :scoreboard_template %>
   <p>
