--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -8,7 +8,7 @@
   <tr>
 	<td> <%= h game.name -%> </td>
 	<td> <%= game.scores.count -%> entries </td>
-    <td><%= link_to 'Show', game %></td>
+    <td><%= link_to 'Show', game_scoreentries_path(game) %></td>
     <td><%= link_to 'Edit', edit_game_path(game) %></td>
     <td><%= link_to 'Destroy', game, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
