--- a/app/views/scoreentries/index.html.erb
+++ b/app/views/scoreentries/index.html.erb
@@ -1,14 +1,14 @@
 <h1><%= @game.name -%></h1>
 
 
-<% form_for :game, @game, :url => {:action => :score_entry} do |f| %>
+<% form_for :game, @game, :url => {:controller => :games, :id => @game.id, :action => :score_entry} do |f| %>
     <%= f.label "New Entry" %>
 	<%= text_field_tag :score_entry %>
 	<%= f.submit "Submit" %>
 <% end %>
 
 
-<% form_tag game_path(@game), :id => :game_filter, :method => :get do %>
+<% form_tag game_scoreentries_path(@game), :id => :game_filter, :method => :get do %>
 Only current scores: 
 <%=  check_box_tag :current, params[:current] -%>
 
@@ -28,7 +28,7 @@ Only current scores:
 
 <table id="scoretable", class="draggable">
 	<%= render :partial => 'scores_header' %>
-	<%= render :partial => 'score_entry', :collection => @score_scope.ordered -%>
+	<%= render :partial => 'score_entry', :collection => @entries.ordered -%>
 </table>
 
 <%= link_to 'Edit', edit_game_path(@game) %> |
